# INVR

./: .env.example  .gitignore  1.md  GENERALISED_AGENT_SETUP.md  README.md  audit_report.md  backend_setup.md  docker-compose.yml  frontend_design_prompt.md  idea.md  master_documentation.md  phases.md  remove_ticked.py  system_architecture.md  system_diagnosis.md  system_evaluation_prompt.md
.agents/: PS.md  (+5 more)
backend/: .env  .env.example  Dockerfile  ICICIBANK_analysis_session_20260630_221950.txt  main.py  pyproject.toml  requirements.txt  run_backtest.py  test_bronze.py  test_gold.py  test_graph.py  test_live.py  test_pipeline.py  test_security_batch.py  test_tutor.py  update_audit.py  verify_fixes.py
backend/.local_cache/: funds_ASHOKLEY.json  funds_ETERNAL.json  funds_IDEA.json  funds_INFY.json  funds_RELIANCE.NS.json  funds_RELIANCE.json  price_ASHOKLEY_1y_1d.json  price_ASHOKLEY_5d_5m.json  price_ETERNAL_1y_1d.json  price_ETERNAL_5d_5m.json  price_ETERNAL_5y_1wk.json  price_ETERNAL_6mo_1d.json  price_IDEA_1y_1d.json  price_IDEA_5d_5m.json  price_INFY_1y_1d.json  price_INFY_5d_5m.json  price_INFY_5y_1wk.json  price_INFY_6mo_1d.json  price_RELIANCE.NS_1y_1d.json  price_RELIANCE.NS_5y_1wk.json  price_RELIANCE.NS_6mo_1d.json
backend/app/: config.py  database.py  main.py  orchestrator.py  telemetry.py
backend/config/: gate_thresholds.py
backend/data/: educational_content.json
backend/scripts/: analyze_and_chat.py  analyze_drift.py  grade_ledger.py  index_static_content.py  simulate_live_history.py  trigger_engine_room.py
backend/tests/: test_observability.py  (+1 more)
(+92 files in other folders)
