[project]
name = "backend"
version = "0.1.0"
description = "AI Investment Intelligence Platform Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "supabase",
    "yfinance",
    "pandas",
    "numpy",
    "sqlalchemy",
    "asyncpg",
    "pydantic",
    "pydantic-settings"
]
