[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "langchain-core>=1.4.6",
    "langgraph>=1.2.4",
    "nsepython>=2.97",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]
